tests/NormalTests/paczka1/small_fuzzy/32173695.err
Error in line 2: XxMhp9SZïS888ï97,7
Error in line 5: Xx.hp9SZ S888 84,1
Error in line 6: A366 A366 83,4
Error in line 3: xcV4V A366 82,1
Error in line 11: A366 S888 37,3
Error in line 13: sVu A82 67,9
